1.19.3-3.0.1:
- Fixed a problem that haunted mobs killed by arrows wouldn't count against the kill bonus

1.19.3-3.0.0:
- Port to 1.19.2

2.0.0:
- Port to 1.18.2

1.1.4:
- xxx